--- a/API_OutlookAutoAPI/compose.yaml
+++ b/API_OutlookAutoAPI/compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       target: builder
-    container_name: fastapi-application
+    container_name: outlookapi_container
     environment:
       OPENAI_API_KEY: "sk-proj-pz2UAmFiRZkwQdWAEnWQT3BlbkFJ5lCjog1bLDboD6DOcc5p"
       username: "tesuto1125@outlook.com"
